# admin-service

./: .gitmodules  Dockerfile  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/gateway/gRPC/: admin_server.py  server.py
app/gateway/service/: admin_service.py
app/kafka/: kf_helper.py
app/kafka/repositories/: kafka_repositories.py
